--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                         consequuntur vel ab quas architecto.</p>
                     <div class="container-card">
                         <div class="card">
-                            <i class="fab fa-html5"></i><p class="tamaño"> HTML 5</p></div>
+                            <i class="fab fa-html5"></i><p class="tamaño-letra"> HTML 5</p></div>
                         <div class="card">
-                            <i class="fab fa-css3-alt"></i><p class="tamaño"> CSS 3</p></div>
+                            <i class="fab fa-css3-alt"></i><p class="tamaño-letra"> CSS 3</p></div>
                         <div class="card">
-                            <i class="fab fa-sass"></i><p class="tamaño"> Sass</p></div>
+                            <i class="fab fa-sass"></i><p class="tamaño-letra"> Sass</p></div>
                         <div class="card">
-                            <i class="fab fa-js"></i><p class="tamaño"> JavaScript</p></div>
+                            <i class="fab fa-js"></i><p class="tamaño-letra"> JavaScript</p></div>
                         <div class="card">
-                            <i class="fab fa-react"></i><p class="tamaño">React</p></div>
+                            <i class="fab fa-react"></i><p class="tamaño-letra">React</p></div>
                         <div class="card">
-                            <i class="fab fa-git-alt"></i><p class="tamaño">GIT</p></div>
+                            <i class="fab fa-git-alt"></i><p class="tamaño-letra">GIT</p></div>
                     </div>
             </div>
         </section>
