--- a/index.html
+++ b/index.html
@@ -125,26 +125,26 @@
                     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
                     
                     <div class="container-contactos">
-                        <div class="caja-active">
+                        <div class="caja-active1">
                                 <a href="https://twitter.com/?lang=es">
                                 <i class="fab fa-twitter cambios2"></i>
-                                <span>@CamilaTuñas</span>
+                                <span class="color-letras">@CamilaTuñas</span>
                             </a></div>
-                        <div class="caja-active">
+                        <div class="caja-active2">
                             <a href="https://github.com/">
                             <i class="fab fa-github-alt cambios2"></i>
-                            <span> Camila2604</span>
+                            <span class="color-letras"> Camila2604</span>
                             </a></div>
-                        <div class="caja-active">
+                        <div class="caja-active2">
                             <a href="https://ar.linkedin.com/">
                             <div></div>
                             <i class="fab fa-linkedin-in cambios2"></i>
-                            <span>camilatuñas</span>
+                            <span class="color-letras">camilatuñas</span>
                             </a></div>
-                        <div class="caja-active">
+                        <div class="caja-active3">
                             <a href="https://outlook.live.com/owa/">
                             <i class="fas fa-envelope cambios2"></i>
-                            <span> camila_tunas@hotmail.com</span>
+                            <span class="color-letras"> camila_tunas@hotmail.com</span>
                         </a></div>
                     </div>
                 </div>
