arregle iconos-terminado

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
                     <!-- Formulario  -->
                 <div class="cajafinal2">
-                    <div class="contactame-escribime"> <h2>Escribime</h2></div>
+                    <div class="contactame-escribime"> <h2 class="escribime">Escribime</h2></div>
                 <form action="">
                     <div class="container-form">
                         <div class="caja-form"><label for="nombre">Nombre*</label>
