--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/animaciones.css">
     <!-- Styles -->
     <link rel="stylesheet" href="./styles/styles.css">
-    <!-- rResponsive -->
+    <!-- Responsive -->
     <link rel="stylesheet" href="./styles/responsive.css">
     <title>🚀 Camila Tuñas</title>
 </head>
@@ -48,8 +48,8 @@
             <div class="container3">
                 <div class="conocimientos"><h2 >Mis conocimientos</h2>
                     </div>
-                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
-                        consequuntur vel ab quas architecto.</p>
+                    <p class="parrafo">Actualmente, soy estudiante de  front end  con excelentes  conocimientos en HTML y CSS, se mucho de Boostrap y Sass. Entiendo muy bien Java Script .
+                        Tengo un gran interés en buscar experiencias que me permitan aprender de los demás.</p>
                     <div class="container-card">
                         <div class="card">
                             <i class="fab fa-html5"></i><p class="tamaño-letra"> HTML 5</p></div>
@@ -81,7 +81,7 @@
             <div class="container5">
                 <div class="proyectos">
                     <h2>Mis proyectos</h2>
-                    <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p>
+                    <p class="parrafo2">Estos son trabajos realizados en el curso de ADA. Dado que sigo cursando algunos trabajos todavía no están terminados.</p>
                 </div>
                 <div class="container-card2">
                     <a href="" target="_blank" class="card-foto">
@@ -89,20 +89,12 @@
                         <h5> Portfolio</h5>
                     </a>
                     <a href="" target="_blank" class="card-foto">
-                        <img src="./assets/images/2.png" alt="imagen2" class="tamaño2">
+                        <img src="https://camila2604.github.io/editordememes/" alt="imagen2" class="tamaño2">
                         <h5>Generador de memes</h5>
-                    </a>
-                    <a href="" target="_blank" class="card-foto">
-                        <img src="./assets/images/3.png" alt="imagen3" class="tamaño2">
-                        <h5> Match 3</h5>
                     </a>
                     <a href="" target="_blank" class="card-foto">
                         <img src="./assets/images/4.png" alt="imagen4" class="tamaño2">
                         <h5> Controlador de gastos</h5>
-                    </a>
-                    <a href="" target="_blank" class="card-foto">
-                        <img src="./assets/images/5.png" alt="imagen5" class="tamaño2">
-                        <h5> Administrador de reuniones</h5>
                     </a>
                     <a href="" target="_blank" class="card-foto">
                         <img src="./assets/images/6.png" alt="imagen6" class="tamaño2">
