--- a/index.html
+++ b/index.html
@@ -84,17 +84,21 @@
                     <p class="parrafo2">Estos son trabajos realizados en el curso de ADA. Dado que sigo cursando algunos trabajos todavía no están terminados.</p>
                 </div>
                 <div class="container-card2">
-                    <a href="" target="_blank" class="card-foto">
+                    <a href="https://camila2604.github.io/portafolio01/" target="_blank" class="card-foto">
                         <img src="./assets/images/1.png" alt="imagen1" class="tamaño2">
                         <h5> Portfolio</h5>
                     </a>
-                    <a href="" target="_blank" class="card-foto">
-                        <img src="https://camila2604.github.io/editordememes/" alt="imagen2" class="tamaño2">
+                    <a href="https://camila2604.github.io/editordememes/" target="_blank" class="card-foto">
+                        <img src="./assets/images/2.png" alt="imagen2" class="tamaño2">
                         <h5>Generador de memes</h5>
                     </a>
                     <a href="" target="_blank" class="card-foto">
                         <img src="./assets/images/4.png" alt="imagen4" class="tamaño2">
                         <h5> Controlador de gastos</h5>
+                    </a>
+                    <a href="" target="_blank" class="card-foto">
+                        <img src="./assets/images/5.png" alt="imagen5" class="tamaño2">
+                        <h5> Buscador de Comics</h5>
                     </a>
                     <a href="" target="_blank" class="card-foto">
                         <img src="./assets/images/6.png" alt="imagen6" class="tamaño2">
@@ -114,13 +118,13 @@
             <div class="container-final2">
                 <div class="caja-final1">
                     <div class="contactame-escribime"> <h2>Contactame</h2></div>
-                    <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
+                    <p class="lorem">Si te gusto mi portfolio te dejo mis datos para que puedas contactarte conmigo. Soy de Capital Federal, Buenos Aires. Argentina.</p>
                     
                     <div class="container-contactos">
                         <div class="caja-active1">
-                                <a href="https://twitter.com/?lang=es">
-                                <i class="fab fa-twitter cambios2"></i>
-                                <span class="color-letras">@CamilaTuñas</span>
+                                <a href="">
+                                <i class="fas fa-mobile-alt cambios2"></i>
+                                <span class="color-letras">11-6235-7248</span>
                             </a></div>
                         <div class="caja-active2">
                             <a href="https://github.com/">
