--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@
                                 <span class="color-letras">11-6235-7248</span>
                             </a></div>
                         <div class="caja-active2">
-                            <a href="https://github.com/">
+                            <a href="https://github.com/camila2604">
                             <i class="fab fa-github-alt cambios2"></i>
                             <span class="color-letras"> Camila2604</span>
                             </a></div>
                         <div class="caja-active2">
-                            <a href="https://ar.linkedin.com/">
+                            <a href="https://www.linkedin.com/in/camila-tu%C3%B1as-4b9625218/">
                             <div></div>
                             <i class="fab fa-linkedin-in cambios2"></i>
                             <span class="color-letras">camilatuñas</span>
                             </a></div>
                         <div class="caja-active3">
-                            <a href="https://outlook.live.com/owa/">
+                            <a href="https:gmail.com">
                             <i class="fas fa-envelope cambios2"></i>
-                            <span class="color-letras"> camila_tunas@hotmail.com</span>
+                            <span class="color-letras"> camilatunas2604@gmail.com</span>
                         </a></div>
                     </div>
                 </div>
@@ -150,17 +150,17 @@
                 <form action="">
                     <div class="container-form">
                         <div class="caja-form"><label for="nombre">Nombre*</label>
-                            <input type="text" name="Nombre" id="idNombre" placeholder="p.ej.:Camila">
+                            <input type="text" name="Nombre" id="idNombre" placeholder="Ej:Camila">
                         </div>
                         <div class="caja-form">      
                             <label for="nombre">Apellido*</label>
-                            <input type="text" name="Apellido" id="idApellido" placeholder="p.ej.:Tuñas">
+                            <input type="text" name="Apellido" id="idApellido" placeholder="Ej:Tuñas">
                         </div>
                     </div>
                     <div class="container-form ">
                         <div class="caja-form">
                             <label for="idEmail">Mail*</label>
-                            <input type="text" name="mail" id="idEmail" size="30" placeholder="p.ej.:camila_tunas@hotmail.com">
+                            <input type="text" name="mail" id="idEmail" size="30" placeholder="Ej:camilatunas2604@gamil.com">
                         </div>
                     </div>    
                     <div class="container-form">
