--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <section>
             <div class="container4">
                 <i class="fas fa-quote-right"></i>
-                <p class="parrafo1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium exercitationem sit minima aut totam praesentium aliquam.</p>
-                <h4>Someone</h4>
+                <p class="parrafo1">Creo que la esencia de la vida consiste en ser fiel a lo que uno cree su destino.</p>
+                <h4>Ernesto Sabato</h4>
             </div>
         </section>
 <!-- -------------------------------------------------- -->
