--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section>
             <div class="container4">
                 <i class="fas fa-quote-right"></i>
-                <p class="parrafo1">Creo que la esencia de la vida consiste en ser fiel a lo que uno cree su destino.</p>
+                <p class="parrafo1">"Creo que la esencia de la vida consiste en ser fiel a lo que uno cree su destino."</p>
                 <h4>Ernesto Sabato</h4>
             </div>
         </section>
